2009-01-06  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am: Correct the upload URL.

2009-01-06  Daniel Elstner  <danielk@openismus.com>

	* docs/index.html: Copy file from Clutter tutorial.
	* docs/tutorial/README: ditto,
	* docs/tutorial/cluttermm-tut.xml: ditto,
	* docs/tutorial/docbook_phpwebnotes.xsl: ditto,
	* docs/tutorial/insert_example_code.pl: ditto,
	* docs/tutorial/style.css: ditto.
	* Makefile.am: Integrate the documentation build infrastructure
	from the Clutter tutorial into the non-recursive build system.

2008-12-31  Daniel Elstner  <danielk@openismus.com>

	* examples/multiline_text_entry/{multiline_entry.{cc,h},main.cc}:
	New example implementing a multi-line text entry actor.  Converted
	from the C Clutter tutorial example of the same name.
	* Makefile.am (bin_PROGRAMS): Add
	examples/multiline_text_entry/example.

2008-12-30  Daniel Elstner  <danielk@openismus.com>

	* examples/scrolling/{scrollingcontainer.{cc,h},main.cc}: New
	example demonstrating a custom container which scrolls its content.
	Converted from the C Clutter tutorial example of the same name.
	* Makefile.am (bin_PROGRAMS): Add examples/scrolling/example.