@@ -1,3 +1,13 @@
+2009-01-06  Daniel Elstner  <danielk@openismus.com>
+
+	* Makefile.am (bin_PROGRAMS): Rename to noinst_PROGRAMS, or every
+	example executable will be installed as $(bindir)/example -- the
+	last one wins.  Do we want to install the example binaries, and if
+	so, where?
+	({,un}install-tutorial): Depend on docs/tutorial/html/index.html
+	rather than the phony target html, because the rule derives the
+	location of the html build directory from the first dependency.
+
 2009-01-06  Murray Cumming  <murrayc@murrayc.com>
 
 	* Makefile.am: Correct the upload URL.
